--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.24.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "typewriter-effect": "^2.21.0"
   },
   "browserslist": {
     "production": [
