--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-/node_modules
+# Node.js
+node_modules/
+npm-debug.log
+package-lock.json
+
+# Build artifacts
 /build
+
+# IDE-specific files
+.vscode/
+.idea/
